force-app/main/default/objects/HealthCloudGA__EhrPractitionerQualification__c/fields/HealthCloudGA__CodeLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CodeLabel__c</fullName>
    <description>Friendly name for code</description>
    <label>Code Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>