force-app/main/default/objects/HealthCloudGA__EhrPractitionerQualification__c/fields/HealthCloudGA__Issuer255__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Issuer255__c</fullName>
    <label>Issuer 255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>