force-app/main/default/objects/HealthCloudGA__EhrPractitionerQualification__c/fields/HealthCloudGA__Issuer__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Issuer__c</fullName>
    <label>Issuer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>