force-app/main/default/objects/HealthCloudGA__EhrPractitionerQualification__c/fields/HealthCloudGA__PeriodStart__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PeriodStart__c</fullName>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>